# wecho

./: .gitignore  LICENSE  LICENSE-COMMONS-CLAUSE  LICENSE-MIT  README.md  README_zh_CN.md  pubspec.yaml
android/: .gitignore  build.gradle.kts
android/app/: build.gradle.kts  proguard-rules.pro
android/app/src/main/: AndroidManifest.xml
android/app/src/main/cpp/: AudioProcessor.hpp  CMakeLists.txt  enum.h  native-lib.cpp
android/app/src/main/cpp/effects/: BassEffect.cpp  ChannelBalanceEffect.cpp  ClarityEffect.cpp  EvenHarmonicEffect.cpp  GainEffect.cpp  SpeakerEffect.cpp  VBPhaseVocoderEffect.cpp  effect.hpp
android/app/src/main/cpp/utils/: VMD.hpp  audioStream.hpp  convolver.hpp  crossFader.hpp  debug.hpp  filter.hpp  harmonic.hpp  limiter.hpp  pitchPicker.hpp  transientDetector.hpp  vbPhaseVocoder.hpp
android/app/src/main/kotlin/com/qumolangmo/wecho/: AudioCaptureService.kt  AudioDeviceMonitor.kt  AudioProcess.kt  MainActivity.kt  MuteEffectFactory.kt  ShizukuHelpMe.kt  TccAssetsProvider.kt  TileCaptureActivity.kt  WechoTileService.kt
android/app/src/main/res/drawable/: ic_launcher_background.xml  ic_launcher_foreground.xml  ic_wecho_tile.xml
android/app/src/main/res/drawable-v24/: ic_launcher_foreground.xml
lib/: main.dart
lib/components/: app_blacklist_page.dart  app_header.dart  components.dart  config_manager_page.dart  control_card.dart  convolve_control_card.dart  details_dialog.dart  eq_slider_panel.dart  equalizer_control_card.dart  generic_control_card.dart  multi_slider_control_card.dart  neumorphic_button.dart  neumorphic_description_dialog.dart  neumorphic_selector.dart  neumorphic_slider.dart  neumorphic_toggle.dart  reset_button.dart  script_effect_card.dart  settings_page.dart  simple_control_card.dart  switch_control_card.dart
lib/components_windows/: channel_balance_card.dart  components_windows.dart  convolution_card.dart  global_gain_card.dart  multi_slider_control_card.dart  windows_title_bar.dart
lib/l10n/: app_en.arb  app_zh.arb
lib/models/: audio_config.dart  config_manager.dart
lib/styles/: neumorphic_styles.dart
lib/view_models/: dsp_controller_view_model.dart
lib/views/: dsp_controller_android.dart  dsp_controller_windows.dart  loading_screen.dart  script_editor_page.dart
native/: AudioProcessor.hpp  CMakeLists.txt  enum.h
native/effects/: AudioGraphicEffect.cpp  BassEffect.cpp  ChannelBalanceEffect.cpp  ClarityEffect.cpp  CompressorEffect.cpp  ConvolveEffect.cpp  DiffSurroundingEffect.cpp  EvenHarmonicEffect.cpp  GainEffect.cpp  IIREqualizerEffect.cpp  LimiterEffect.cpp  LookAheadSoftLimitEffect.cpp  LowCatEffect.cpp  ReverbEffect.cpp  ScriptEffect.cpp  SpeakerEffect.cpp  VBPhaseVocoderEffect.cpp  VirtualBassEffect.cpp  effect.hpp
native/scripting/: wecho_dsp_c_api.h  wecho_dsp_c_impl.cpp
native/tcc/: tcclib.h
native/utils/: AudioFile.hpp  SoftLimiter.hpp  VMD.hpp  audioGraphic.hpp  audioStream.hpp  compressor.hpp  convolver.hpp  crossFader.hpp  debug.hpp  filter.hpp  harmonic.hpp  limiter.hpp  operator.hpp  pitchPicker.hpp  transientDetector.hpp  utils.hpp  vbPhaseVocoder.hpp
windows/: .gitignore  CMakeLists.txt
windows/apo/: DllMain.cpp  WechoAPO.cpp  WechoAPO.h  WechoAPODll.idl  WechoAPOFactory.cpp  WechoAPOFactory.h  WechoAPOInterface.idl  apo.inf  apo.sln  apo.vcxproj  apo.vcxproj.filters  debug.hpp  install.bat  interruptedSleep.hpp  registerHelper.cpp  registerHelper.hpp
windows/apo/fftw/: fftw3f.lib
windows/runner/: CMakeLists.txt  Runner.rc  apoBridge.cpp  apoBridge.h  flutter_window.cpp  flutter_window.h  irLoader.hpp  main.cpp  win32_window.cpp
windows/sharedMemory/: sharedMemory.cpp  sharedMemory.vcxproj  sharedMemory.vcxproj.filters
windows/test/: main.cpp  test.sln  test.vcxproj  test.vcxproj.filters
